// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductGrid /> should render the original layout 1`] = `
<ProductGrid
  flags={null}
  handleGetProducts={[Function]}
  infiniteLoad={false}
  meta={null}
  products={[]}
  requestHash={null}
  scope={null}
  totalProductCount={null}
>
  <Layout
    columns={2}
  >
    <Grid
      className="css-14bu05p"
      component="ul"
      data-test-id="productGrid"
      wrap={true}
    >
      <ul
        className="css-14bu05p css-h7r55a common__grid css-u7q1iu"
        data-test-id="productGrid"
      >
        <ProductListTypeProvider
          meta={null}
          subType={null}
          type="productGrid"
        />
      </ul>
    </Grid>
  </Layout>
</ProductGrid>
`;

exports[`<ProductGrid /> should render with the InfiniteContainer 1`] = `
<ProductGrid
  flags={null}
  handleGetProducts={[Function]}
  infiniteLoad={true}
  meta={null}
  products={[]}
  requestHash={null}
  scope={null}
  totalProductCount={null}
>
  <Consumer>
    <ProductListTypeProvider
      meta={null}
      subType={null}
      type="productGrid"
    >
      <InfiniteContainer
        enablePromiseBasedLoading={true}
        initialLimit={32}
        items={[]}
        iterator={[Function]}
        limit={32}
        loader={[Function]}
        loadingIndicator={
          <LoadingIndicator
            className={null}
          />
        }
        requestHash={null}
        totalItems={null}
        wrapper={[Function]}
      />
    </ProductListTypeProvider>
  </Consumer>
</ProductGrid>
`;
